# OCP-HM-MegaRAC_Community_Edition

./: .gitlab-ci.yml  AMIIP.cfg  Code of Conduct.md  LICENSE  MAINTAINERS  OSP.cfg  README.md  Trademark.md  core_features  core_macros  governance.md  openbmc-env  projdef.cfg  projdef.h  projdef.mk  projdef.mod.cfg  projdef.mod.h  update-features-macro.py
openbmc_modules/dbus-sensors/: .clang-ignore  .gitignore  CMakeLists.txt  Jenkinsfile  MAINTAINERS  README.md
openbmc_modules/dbus-sensors/include/: ADCSensor.hpp  CPUSensor.hpp  ChassisIntrusionSensor.hpp  ExitAirTempSensor.hpp  HwmonTempSensor.hpp  IpmbSensor.hpp  MCUTempSensor.hpp  NVMeDevice.hpp  NVMeSensor.hpp  PSUEvent.hpp  PSUSensor.hpp  PwmSensor.hpp  TachSensor.hpp  Thresholds.hpp  Utils.hpp  VariantVisitors.hpp  sensor.hpp
openbmc_modules/dbus-sensors/service_files/: xyz.openbmc_project.adcsensor.service  xyz.openbmc_project.cpusensor.service  xyz.openbmc_project.exitairsensor.service  xyz.openbmc_project.fansensor.service  xyz.openbmc_project.hwmontempsensor.service  xyz.openbmc_project.intrusionsensor.service  xyz.openbmc_project.ipmbsensor.service  xyz.openbmc_project.mcutempsensor.service  xyz.openbmc_project.nvmesensor.service  xyz.openbmc_project.psusensor.service
openbmc_modules/dbus-sensors/src/: ADCSensor.cpp  ADCSensorMain.cpp  CPUSensor.cpp  CPUSensorMain.cpp  ChassisIntrusionSensor.cpp  ExitAirTempSensor.cpp  FanMain.cpp  HwmonTempMain.cpp  HwmonTempSensor.cpp  IntrusionSensorMain.cpp  IpmbSensor.cpp  MCUTempSensor.cpp  NVMeSensor.cpp  NVMeSensorMain.cpp  PSUEvent.cpp  PSUSensor.cpp  PSUSensorMain.cpp  PwmSensor.cpp  TachSensor.cpp  Thresholds.cpp  Utils.cpp
openbmc_modules/dbus-sensors/tests/: test_HwmonTempSensor.cpp  test_TachSensor.cpp
openbmc_modules/entity-manager/: .clang-ignore  .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
openbmc_modules/entity-manager/configurations/: 1Ux16 Riser.json  2Ux8 Riser.json  8X25 HSBP.json  A2UL16RISER.json  A2UX8X4RISER.json  AHW1UM2RISER.json  AXX1P100HSSI_AIC.json  AXX2PRTHDHD.json  BNP Baseboard.json  Delta DPS-750XB PSU.json  F1U12X25 HSBP.json  F1U4X25 HSBP.json  F2U12X35 HSBP.json  F2U8X25 HSBP.json  FBTP.json  FBYV2.json  Flextronics S-1100ADU00-201 PSU.json  Intel Front Panel.json  NVME P4000.json  PCIE SSD Retimer.json  PSSF132202A.json  PSSF162205A.json  PSSF212201A.json  PSSF222201A.json  R1000 Chassis.json  R2000 Chassis.json  (+5 more)
openbmc_modules/gpioplus/: README.md  meson.build
openbmc_modules/host-error-monitor/: .clang-format  CMakeLists.txt  MAINTAINERS  README.md
openbmc_modules/inarp/: MAINTAINERS  Makefile.am  configure.ac  inarp.c
openbmc_modules/intel-dbus-interfaces/: .gitignore  MAINTAINERS  Makefile.am  Makefile.interfaces.in  README.md  configure.ac  generate_makefile.sh  generate_yaml_makefile.sh  intel-dbus-interfaces.pc.in
openbmc_modules/intel-ipmi-oem/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  MAINTAINERS  README.md  ipmi-whitelist.conf
openbmc_modules/ipmbbridge/: CMakeLists.txt  MAINTAINERS  cmake-format.json  ipmb-channels.json  ipmb.service  ipmbbridged.cpp  ipmbbridged.hpp  ipmbdefines.hpp  ipmbutils.cpp  ipmbutils.hpp
openbmc_modules/ipmi-blob-tool/: .gitignore  MAINTAINERS  Makefile.am  README.md  bootstrap.sh  configure.ac
openbmc_modules/ipmi-fru-parser/: .gitignore  MAINTAINERS  Makefile.am  configure.ac  fru_area.cpp  fru_area.hpp  frup.cpp  frup.hpp  readeeprom.cpp  strgfnhandler.cpp  types.hpp  writefrudata.cpp  writefrudata.hpp
openbmc_modules/jsnbd/: Makefile.am  README  config.sample.json  configure.ac  nbd-proxy.c
openbmc_modules/kcsbridge/: LICENSE  MAINTAINERS  Makefile.am  README.md  bootstrap.sh  configure.ac  kcsbridged.cpp  kcsbridged.service  org.openbmc.HostIpmi.conf  phosphor-ipmi-kcs@.service
openbmc_modules/libmctp/: .clang-format  .clang-ignore  .gitignore  CMakeLists.txt  MAINTAINERS  Makefile.am  Makefile.inc  README.md  alloc.c  astlpc.c  bootstrap.sh  configure.ac  container_of.h  core.c  format-code.sh  libmctp-astlpc.h  libmctp-serial.h  libmctp.h  mctp-demux.service  serial.c
openbmc_modules/libpeci/: .clang-ignore  CMakeLists.txt  LICENSE  MAINTAINERS  README.md  peci.c  peci.h  peci_cmds.c
openbmc_modules/mboxbridge/: .gitignore  MAINTAINERS  Makefile.am  README.md  backend.h  common.c  common.h  configure.ac  control.c  control_dbus.c  control_dbus.h  control_legacy.c  dbus.h  format-code.sh  lpc.c  lpc.h  mboxctl.c  mboxd.c  mboxd.h  protocol.c  protocol.h  transport.h  transport_dbus.c  transport_dbus.h  transport_mbox.c  transport_mbox.h  windows.c  windows.h
openbmc_modules/obmc-console/: .gitignore  .travis.yml  MAINTAINERS  Makefile.am  README.md  config.c  configure.ac  console-client.c  console-server.c  console-server.h  console-socket.c  log-handler.c  ringbuffer.c  socket-handler.c  tty-handler.c  util.c
openbmc_modules/obmc-ikvm/: MAINTAINERS  create_usbhid.sh  ikvm_args.cpp  ikvm_input.cpp  ikvm_input.hpp  ikvm_manager.cpp  ikvm_server.cpp  ikvm_server.hpp  ikvm_video.cpp  ikvm_video.hpp  meson.build  scancodes.hpp  start-ipkvm.service
openbmc_modules/pam-ipmi/: .clang-format  .gitignore  MAINTAINERS  Makefile.am  README.md  configure.ac  ipmi_pass  key_file
openbmc_modules/peci-pcie/: CMakeLists.txt  MAINTAINERS  README.md
openbmc_modules/phosphor-bmc-code-mgmt/: MAINTAINERS  README.md  activation.cpp  activation.hpp  download_manager.cpp  download_manager.hpp  download_manager_main.cpp  elog-errors.hpp  flash.hpp  force-reboot.service.in  gen-bios-tar  image_manager.cpp  image_manager.hpp  image_manager_main.cpp  image_verify.cpp  image_verify.hpp  images.cpp  images.hpp  item_updater.cpp  item_updater.hpp  item_updater_helper.hpp  item_updater_main.cpp  meson.build  meson_options.txt  obmc-flash-bmc  obmc-flash-bmc-setenv@.service.in  obmc-flash-host-bios@.service.in  openssl_alloc.cpp  openssl_alloc.hpp  reboot-guard-disable.service.in  reboot-guard-enable.service.in  serialize.cpp  serialize.hpp  sync_manager.cpp  sync_manager.hpp  sync_manager_main.cpp  sync_watch.cpp  sync_watch.hpp  utils.cpp  utils.hpp  (+8 more)
(+5251 files in other folders)
